# WebApp

./: .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  main.py
backend/app/data/: employee.xlsx  employee_seed.xlsx  warehouse.xlsx
backend/app/services/: product_service.py  text_normalizer.py
frontend/: Dockerfile  README.md  pnpm-lock.yaml  vite.config.ts
frontend/src/lib/: api.ts
frontend/src/routes/: +page.svelte  layout.css
